# HMCLauncher-rs

./: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
resources/: HMCL.rc
src/: debug.rs  heap.rs  i18n.rs  java.rs  launcher.rs  lib.rs  main.rs  platform.rs  wide.rs  wide_path.rs
