[package]
name = "HMCLauncher"
version = "3.7.0+0"
edition = "2024"

[dependencies]

[dependencies.windows]
version = "0.61.3"
features = ["Win32_System", "Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_System_Threading"]

[build-dependencies]
embed-resource = "3.0"
toml = "0.9.2"

[profile.release]
lto = true
opt-level = "z"
